[project]
name = "mlflow-tutorial"
version = "0.1.0"
description = "MLflow tutorial for data science MLOps"
requires-python = ">=3.8"
dependencies = [
    "mlflow>=2.8.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipykernel>=6.25.0",
    "joblib>=1.3.0",
    "boto3>=1.28.0",
    "hyperopt>=0.2.7",
] 