[project]
name = "mlflow-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.27.0",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
